@@ -1,4 +1,4 @@
-package sub;
+package ch2;
 
 import java.util.Arrays;
 import java.util.Collection;
@@ -38,14 +38,20 @@ public class MyArrayList<T> implements List<T> {
 		mal.add(3);
 		System.out.println(Arrays.toString(mal.toArray()) + " size = " + mal.size);
 
-		mal.remove(new Integer(2));
+		mal.remove(Integer.valueOf(2));
 		System.out.println(Arrays.toString(mal.toArray()) + " size = " + mal.size);
 	}
 
 	@Override
 	public boolean add(T element) {
-		// TODO: FILL THIS IN!
-		return false;
+		if(size >= array.length){
+			T[] bigger = (T[]) new Object[array.length * 2];
+			System.arraycopy(array, 0, bigger, 0, array.length);
+			array = bigger;
+		}
+		array[size] = element;
+		size++;
+		return true;
 	}
 
 	@Override
@@ -110,7 +116,11 @@ public class MyArrayList<T> implements List<T> {
 
 	@Override
 	public int indexOf(Object target) {
-		// TODO: FILL THIS IN!
+		for (int i = 0; i < size; i++) {
+			if(equals(target, array[i])){
+				return i;
+			}
+		}
 		return -1;
 	}
 
@@ -119,7 +129,7 @@ public class MyArrayList<T> implements List<T> {
 	 * Handles the special case that the target is null.
 	 *
 	 * @param target
-	 * @param object
+	 * @param element
 	 */
 	private boolean equals(Object target, Object element) {
 		if (target == null) {
@@ -181,8 +191,12 @@ public class MyArrayList<T> implements List<T> {
 
 	@Override
 	public T remove(int index) {
-		// TODO: FILL THIS IN!
-		return null;
+		T toRemove = get(index);
+		for (int i = index; i < size-1; i++) {
+			array[i] = array[i+1];
+		}
+		size--;
+		return toRemove;
 	}
 
 	@Override
@@ -201,8 +215,12 @@ public class MyArrayList<T> implements List<T> {
 
 	@Override
 	public T set(int index, T element) {
-		// TODO: FILL THIS IN!
-		return null;
+		if(element == null){
+			throw new NullPointerException();
+		}
+		T prev = get(index);
+		array[index] = element;
+		return prev;
 	}
 
 	@Override
@@ -227,5 +245,22 @@ public class MyArrayList<T> implements List<T> {
 	@Override
 	public <U> U[] toArray(U[] array) {
 		throw new UnsupportedOperationException();
+	}
+
+	@Override
+	public String toString() {
+		Iterator<T> it = iterator();
+		if (! it.hasNext())
+			return "[]";
+
+		StringBuilder sb = new StringBuilder();
+		sb.append('[');
+		for (;;) {
+			T e = it.next();
+			sb.append(e == this ? "(this Collection)" : e);
+			if (! it.hasNext())
+				return sb.append(']').toString();
+			sb.append(',').append(' ');
+		}
 	}
 }
